Improve CLI doc

--- a/documentation/howto_Cobigen-CLI-generation.asciidoc
+++ b/documentation/howto_Cobigen-CLI-generation.asciidoc
@@ -53,5 +53,5 @@ image::images/selectedIncr.PNG[Generation path, link="images/selectedIncr.PNG"]
 
 When generating code from a Java file, CobiGen makes use of Java reflection for generating templates. In order to do that, the CLI needs to find the compiled source code of your project.
 
-If you find an error like `Compiled class foo\bar\EmployeeEntity.java has not been found`, it means you need to run `mvn clean install` so that a new `target` folder gets created with the needed compiled sources.
+If you find an error like `Compiled class foo\bar\EmployeeEntity.java has not been found`, it means you need to run `mvn clean install` on the input project so that a new `target` folder gets created with the needed compiled sources.
 
