--- a/documentation/cobigen-core_development.asciidoc
+++ b/documentation/cobigen-core_development.asciidoc
@@ -91,7 +91,7 @@ The *__ContextConfiguration__* creates a new ContextConfiguration from the *conf
 How the ContextConfiguration works explained deeply https://github.com/devonfw/tools-cobigen/wiki/Core-Development#4-1-contextconfiguration[here].
 =========
 
-The Configuration initialization requires the version of Freemarker to be used and at the ObjectWrapper initialization aswell.
+The Configuration initialization requires the version of Freemarker to be used and at the ObjectWrapper initialization as well.
 The *__DefaultObjectWrapperBuilder__* creates an *__DefaultObjectWrapper__* object that maps Java objects to the type-system of FreeMarker Template Language (FTL) with the given `incompatibleImprovements` specified by the version used as argument.
 
 The configuration of Freemarker requires to specify to a __TemplateLoader__. A __TemplateLoader__ is an interface provided by Freemarker library that the developer should implement to fit the needs. The __TemplateLoader__ implementation at CobiGen is the class *__NioFileSystemTemplateLoader.java__* from the *config.nio* package.
@@ -111,12 +111,12 @@ That reader uses the JAXB, JAXB (Java Architecture for XML Binding) provides a f
 
 ==== JAXB
 
-JAXB auto generates the Java object within the JAXBContext especified at the `xmlns` attribute of the `contextConfiguration` field from the `context.xml` file
+JAXB auto generates the Java object within the JAXBContext specified at the `xmlns` attribute of the `contextConfiguration` field from the `context.xml` file
 
 [source,java]
-Unmarshaller unmarschaller = JAXBContext.newInstance(ContextConfiguration.class).createUnmarshaller();
+Unmarshaller unmarshaller = JAXBContext.newInstance(ContextConfiguration.class).createUnmarshaller();
 
-That autogeneration follows the `contextConfiguration.xsd` schema. Each Java object follows the template specified with the field `<xs:CompleType>` from the schema file.
+That auto-generation follows the `contextConfiguration.xsd` schema. Each Java object follows the template specified with the field `<xs:CompleType>` from the schema file.
 
 [source,xml]
 <xs:complexType name="trigger">
@@ -169,7 +169,7 @@ public class Trigger {
 
 This process it is done when calling the `unmarshal()` method.
 [source,java]
-Object rootNode = unmarschaller.unmarshal(Files.newInputStream(contextFile));
+Object rootNode = unmarshaller.unmarshal(Files.newInputStream(contextFile));
 
 [NOTE]
 ===========
@@ -240,8 +240,8 @@ try (
                                                               + "/contextConfiguration.xsd");
     InputStream configInputStream = Files.newInputStream(contextFile)) {
     Schema schema = schemaFactory.newSchema(new StreamSource(schemaStream));
-    unmarschaller.setSchema(schema);
-    rootNode = unmarschaller.unmarshal(configInputStream);
+    unmarshaller.setSchema(schema);
+    rootNode = unmarshaller.unmarshal(configInputStream);
     contextNode = (ContextConfiguration) rootNode;
 }
 
@@ -287,7 +287,7 @@ As the model has been created at the *CobiGenWrapper*, there is no need to creat
 . Get the destination file.
 . Check if the destination file already exists +
 If it exists, but the forceOverride is set to `true` or the merge strategy of the template is null, the file will be overwritten, not merged. Otherwise, first generate output into a writter object, get the merger and merge the original file with the writter and write the file with the merge result.
-. If the file does not exists, simple write the file.
+. If the file does not exist, simple write the file.
 
 === Single Container Input or multiple files selection
 
