--- a/documentation/cobigen-eclipse_installation.asciidoc
+++ b/documentation/cobigen-eclipse_installation.asciidoc
@@ -17,7 +17,7 @@ ____
 menu bar -> _Help_ -> _Install new Software..._
 +
 image:images/installation/01-install-new-software.png[]
-. Open CobiGen's updatesite +
+. Open CobiGen's update site +
 Insert the update site of your interest into the filed _Work with_ and press _Add ..._
     * Stable releases: http://de-mucevolve02/files/cobigen/updatesite/stable/ 
     * Beta/RC releases: http://de-mucevolve02/files/cobigen/updatesite/experimental/ +
@@ -36,4 +36,4 @@ In general updating CobiGen for eclipse is done via the update mechanism of ecli
 
 image:images/installation/03-update-software.png[]
 
-Upgrading eclipse CobiGen plug-in to v3.0.0 needs some more attention of the user due to a changed plug-in architecture of CobiGen's link:cobigen-core_configuration#plugin-mechanism[core module] and the eclipse integration. Eventually, we were able to provide any plug-in of CobiGen seperately as its own eclipse bundle (fragment), which is automatically discovered by the main CobiGen Eclipse Plug-in after installation.
+Upgrading eclipse CobiGen plug-in to v3.0.0 needs some more attention of the user due to a changed plug-in architecture of CobiGen's link:cobigen-core_configuration#plugin-mechanism[core module] and the eclipse integration. Eventually, we were able to provide any plug-in of CobiGen separately as its own eclipse bundle (fragment), which is automatically discovered by the main CobiGen Eclipse plug-in after installation.
