--- a/documentation/cobigen-jsonplugin.asciidoc
+++ b/documentation/cobigen-jsonplugin.asciidoc
@@ -13,7 +13,7 @@ There are currently these merge strategies:
 * merge strategy `jsonmerge_override` (add the new code overwriting the existent in case of conflict)
 
 . JsonArray's will be ignored / replaced in total
-. JsonObjects in conclict will be processed recursively ignoring adding non existent elements.
+. JsonObjects in conflict will be processed recursively ignoring adding non existent elements.
 
 == Merge Process
 
